# turboquant

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  idea.md  llamacpp-WHT+均匀量化最佳实践.md  llamacpp-WHT.md  plan.md  plan_phase10.md  polarquant中文.md  相关论文.md
.github/workflows/: ci.yml
benches/: turboquant_bench.rs
cpp/: rocksdb_query_plugin.h  simd_distance.h  vector_engine.h  vector_query_engine.cpp
docs/: sequence_diagrams.md
faiss/: Makefile  README.md  test_faiss.py  test_faiss_ivf.py  test_faiss_ivfpq.py
faiss/scalar_quantizer/: FILES.md  SEQUENCE_DIAGRAM.md
faiss/standalone_test/: README_QUANTIZATION.md  ivf_turboquant.h  quantization.h  rabitq_faiss.h  test_cosine_vs_recall  test_cosine_vs_recall.cpp  test_cost_benefit.cpp  test_industrial.cpp  test_ivf_turboquant  test_rabitq_diagnosis.cpp  test_rabitq_faiss  test_rabitq_real  test_turboquant_pipeline  test_turboquant_pipeline.cpp  test_turboquant_real.cpp
faiss/vector_transform/: VectorTransform.cpp
google/models/: modeling_llama_qjl.py
google/utils/: metrics.py
idea/: idea.md  llamacpp工程实现.md  polarquant-safari.md
llamacpp/: FILES.md
llamacpp/cuda/: tq4-set-rows.cu
llamacpp/tq/: test_tq.c  tq_quants.c
src/: config.rs  hadamard.rs  ivf.rs  ivf_store.rs  kmeans.rs  lib.rs  lloyd_max.rs  main.rs  rabitq.rs  server.rs  sift.rs  sq8.rs  store.rs  turboquant.rs  utils.rs  vector_engine_ffi.rs
study/faiss/: README.md  test_faiss_ivfrabitq.py
study/faiss/standalone_test/: Makefile  README.md  industrial_quantization.h  test_cost_benefit  test_industrial  test_ivf_turboquant.cpp  test_quantization  test_quantization.cpp  test_rabitq_detailed  test_rabitq_detailed.cpp  test_rabitq_diagnosis  test_rabitq_faiss.cpp  test_rabitq_real.cpp  test_recall_analysis  test_recall_analysis.cpp  test_turboquant_real
study/faiss/vector_transform/: FILES.md  README.md
study/glm51/: Cargo.toml  Makefile  README.md  diagrams.md
study/glm51/benches/: polarquant_bench.rs
study/glm51/examples/: kv_cache_demo.rs
study/glm51/src/: batch.rs  config.rs  error.rs  lib.rs  quantizer.rs  utils.rs
study/glm51/tests/: integration.rs
study/google/: Makefile  README.md  README_ORIGINAL.md
study/google/models/: kernel4group.py  modeling_llama_polar.py
study/kimi25/: README.md  test_hadamard-numba.py  test_hadamard.py  test_umap.py
study/kimi25/polarquant/: GITHUB_SETUP.md  Makefile  README.md  pyproject.toml
study/kimi25/polarquant/.pytest_cache/v/cache/: nodeids
study/kimi25/polarquant/docs/: README.md  generate_sequence_diagram.py  sequence_diagram.md  sequence_diagram.puml
study/kimi25/polarquant/examples/: basic_usage.py  kv_cache_demo.py  qwen_quantization_demo.py  qwen_weight_quantization.py  qwen_weight_quantization_simple.py
study/kimi25/polarquant/polarquant/: __init__.py  core.py  utils.py
study/kimi25/polarquant/polarquant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
study/kimi25/polarquant/tests/: __init__.py  test_core.py  test_integration.py  test_utils.py
study/llamacpp/: Makefile  README.md
study/llamacpp/cuda/: tq4-rotate.cu
study/llamacpp/tq/: tq_quants.h
tests/: persistence_qps_test.rs  siftsmall_test.rs  store_test.rs
turboquant-rs/: Cargo.toml
