[package]
name = "turboquant"
version = "0.1.0"
edition = "2021"
description = "High-performance vector quantization: TurboQuant + SQ8 and RaBitQ IVF + SQ8"
license = "MIT"

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
rocksdb = "0.22"
serde = { version = "1", features = ["derive"] }
bincode = "1"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "turboquant_bench"
harness = false

[profile.release]
opt-level = 3
lto = false
codegen-units = 16

[profile.dev]
opt-level = 0
