[package]
name = "turboquant"
version = "0.1.0"
edition = "2021"
description = "High-performance vector quantization: TurboQuant + SQ8 and RaBitQ IVF + SQ8"
license = "MIT"

[features]
default = ["nng", "cpp-engine"]
nng = ["dep:nng"]
cpp-engine = []

[build-dependencies]
cc = { version = "1", features = ["parallel"] }

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
rocksdb = "0.22"
serde = { version = "1", features = ["derive"] }
bincode = "1"
rayon = "1.10"
tempfile = "3"
nng = { version = "1.0", optional = true }
parking_lot = "0.12"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "turboquant_bench"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
