[package]
name = "polarquant"
version = "0.1.0"
edition = "2021"
description = "PolarQuant: Lossless quantization via polar coordinate transformation (Rust implementation)"
license = "MIT"
readme = "README.md"
keywords = ["quantization", "polar", "compression", "kv-cache", "llm"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
nalgebra = "0.33"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "2.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
approx = "0.5"

[[bench]]
name = "polarquant_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
lto = true
